--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html>
-<style>
-body: {
-    margin: 0
-}
-</style>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="app.css">
 </head>
 
 <body>
